fixed overflow issue

--- a/sass/general.scss
+++ b/sass/general.scss
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -16,7 +16,7 @@ body {
   font-weight: 400;
   font-size: 1.8rem;
   font-family: $poppins;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .header {
